--- a/05/05.css
+++ b/05/05.css
@@ -118,3 +118,23 @@ input:focus {
   font-size: .75rem;
   font-weight: 600;
 }
+
+.average {
+  text-align: right;
+  padding: 1rem;
+  background-color: rgb(0, 176, 207);
+  border: 2px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, .25);
+  color: #FFFFFFDD;
+}
+
+.average strong {
+  color: #FFFFFF;
+}
+
+.average span {
+  display: inline-block;
+  width: 50px;
+  text-align: right;
+  border-bottom: 1px solid #FFFFFF77;
+}
